Changes to job monitor

--- a/KarstShell/src/main/resources/static/index.html
+++ b/KarstShell/src/main/resources/static/index.html
@@ -2,23 +2,7 @@
 <body>
 <h1> <center>Karst Job Submission Shell</center></h1>
 <h2><center>Team Zenith</center></h2>
-	<form method="POST" enctype="multipart/form-data"
-		action="/upload">
-<h3> User configuration parameters</h3>		
-	 Enter the username:<input type="text" name="user"><br /> 
-	 Enter the email ID:<input type="text" name="emailId"><br />
-	 Upload private key :
-	<input type="file" name="ppk"><br /> 	 	 
-		
-<h3> Job configuration parameters</h3>
-     Job file <input type="file" name="file"><br /> 
-	 Enter the job name:<input type="text" name="jobName"><br /> 
-	 Enter the number of nodes:<input type="text" name="nodes" value="1"><br /> 
-	 Enter the number of ppn:<input type="text" name="ppn" value="1"><br /> 
-	 Enter the walltime: <input type="text" name="walltime" value="10:00"><br /> 
-	 Enter the target path: <input type="text" name="tpath"><br /> 
-	 <input type="submit"
-			value="Submit job"> 
-	</form>
+	<a href="submitjob.html">Submit job</a>
+	<a href="monitorjob.html">Monitor Job</a>
 </body>
 </html>
