updated relative Path

--- a/KarstShell/src/main/resources/static/canceljob.html
+++ b/KarstShell/src/main/resources/static/canceljob.html
@@ -8,7 +8,7 @@
 		action="cancel">
 <h3> User configuration parameters</h3>		
 	 Enter the username:<input type="text" name="username"><br /> 
-	 Enter the passphrase(if any):<input type="text" name="passPhrase"><br /> 
+	 Enter the passphrase(if any):<input type="password" name="passPhrase"><br /> 
 	 Upload private key :
 	<input type="file" name="ppkFile"><br /> 	 	 
 	 Enter the job number:<input type="text" name="jobNumber"><br /> 
