--- a/KarstShell/src/main/resources/static/submitjob.html
+++ b/KarstShell/src/main/resources/static/submitjob.html
@@ -6,7 +6,7 @@
 
 
 	<form method="POST" enctype="multipart/form-data"
-		action="/upload">
+		action="upload">
 <h3> User configuration parameters</h3>		
 	 Enter the username:<input type="text" name="user"><br /> 
 	 Enter the passphrase(if any):<input type="password" name="pass"><br /> 
